# kodebar

./: .gitignore  AGENTS.md  CONTEXT-MAP.md  Milestones.md  PRD.md  README.md  skills-lock.json
.github/workflows/: backend.yml
backend/: CONTEXT.md  Cargo.toml
backend/src/: main.rs
backend/src/probe/: antigravity.rs  mod.rs
docs/adr/: 0001-backend-language-rust.md  0002-native-backend-no-cli-dependency.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
frontend/: CONTEXT.md
